# gemini-visual-design

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
agents/: visual-enhancer.md
commands/: create-asset.md  create-video.md  design-mockup.md  design-system.md  review-visuals.md
docs/screenshots/: README.md  edit-after.jpg.meta.json  edit-before.jpg.meta.json  hero-dashboard.analysis.json  hero-dashboard.jpg.meta.json  icon-set.jpg.meta.json
hooks/: hooks.json
hooks/scripts/: check-api-key.sh
skills/visual-design-system/: SKILL.md
skills/visual-design-system/references/: project-types.md  prompt-guide.md  prompt-templates.md
src/gemini_visual_mcp/: __init__.py  __main__.py  analyzer.py  asset_manager.py  config.py  gemini_client.py  image_edit.py  image_gen.py  image_utils.py  prompt_engine.py  server.py  style_profile.py  video_gen.py
tests/: test_analyzer.py  test_asset_manager.py  test_gemini_client.py  test_image_edit.py  test_image_gen.py  test_image_utils.py  test_prompt_engine.py  test_server.py  test_style_profile.py  test_video_gen.py
