[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemini-visual-design"
version = "1.0.0"
description = "MCP server for visual design with Google Gemini - image generation, editing, video creation, and design analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Austin Beck" }
]
keywords = [
    "mcp",
    "claude-code",
    "claude-code-plugin",
    "gemini",
    "imagen",
    "veo",
    "visual-design",
    "image-generation",
    "video-generation",
    "ai-image-generator",
    "design-system",
    "design-tokens",
    "design-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
gemini-visual-design = "gemini_visual_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_visual_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
